# Optimization

./: .gitignore  CMakeLists.txt  README.md
optimization/: optimization.sln
optimization/optimization/: Hooke-Jeeves.csv  HookeSimulation.csv  Hooke_wykres.csv  Rosen_wykres.csv  Rosenbrock.csv  RosenbrockSimulation.csv  Simulation.csv  chart1.csv  chart2.csv  expansion.csv  fibonacci.csv  lagrange.csv  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  optimization.vcxproj  optimization.vcxproj.filters  polozenia.txt  simulation_fibonacci.csv  simulation_lagrange.csv  solution.cpp  solution.h  symulacja_lab0.csv  user_funs.cpp  user_funs.h
optimization/optimization/lab2/: Hooke-Jeeves.csv  HookeSymulacja.csv  Hooke_wykres.csv  Rosen_wykres.csv  Rosenbrock.csv  RosenbrockSymulacja.csv  Symulacja.csv
optimization/optimization/x64/Debug/: optimization.exe.recipe  optimization.ilk  vc143.idb
optimization/optimization/x64/Debug/optimization.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  optimization.lastbuildstate
